--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT = 3000
+ELASTIC_APM_SERVICE_NAME=job-board
+ELASTIC_APM_ENVIRONMENT=local
+ELASTIC_APM_SECRET_TOKEN=secrettokengoeshere
+ELASTIC_APM_SERVER_URL=https://localhost:8200
+ELASTIC_APM_VERIFY_SERVER_CERT=false
